// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSearchBar Snapshot Consistency matches snapshot with category and back button 1`] = `
<View
  style={
    [
      {
        "left": 16,
        "position": "absolute",
        "right": 16,
        "zIndex": 10,
      },
      {
        "top": 12,
      },
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
    ]
  }
>
  <TouchableOpacity
    accessibilityLabel="Back to list"
    accessibilityRole="button"
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[MockFunction]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 22,
        "elevation": 4,
        "flexShrink": 0,
        "height": 44,
        "justifyContent": "center",
        "shadowColor": "#1A2520",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#1A2520"
      name="arrow-back"
      size={20}
    />
  </TouchableOpacity>
  <TouchableOpacity
    accessibilityLabel="Search jobs. Plumbing · 1 job nearby"
    accessibilityRole="search"
    activeOpacity={0.9}
    onPress={[MockFunction]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 32,
        "elevation": 4,
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 10,
        "shadowColor": "#1A2520",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
      }
    }
  >
    <Ionicons
      color="#1A2520"
      name="search"
      size={18}
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Near you
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4A5751",
            "fontSize": 12,
            "marginTop": 1,
          }
        }
      >
        Plumbing · 1 job nearby
      </Text>
    </View>
    <TouchableOpacity
      accessibilityLabel="Open filters"
      accessibilityRole="button"
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onPress={[MockFunction]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#1A2520"
        name="options-outline"
        size={16}
      />
    </TouchableOpacity>
  </TouchableOpacity>
</View>
`;

exports[`MapSearchBar Snapshot Consistency matches snapshot without category 1`] = `
<View
  style={
    [
      {
        "left": 16,
        "position": "absolute",
        "right": 16,
        "zIndex": 10,
      },
      {
        "top": 12,
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityLabel="Search jobs. Any category · 3 jobs nearby"
    accessibilityRole="search"
    activeOpacity={0.9}
    onPress={[MockFunction]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 32,
        "elevation": 4,
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 10,
        "shadowColor": "#1A2520",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
      }
    }
  >
    <Ionicons
      color="#1A2520"
      name="search"
      size={18}
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 12,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Near you
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4A5751",
            "fontSize": 12,
            "marginTop": 1,
          }
        }
      >
        Any category · 3 jobs nearby
      </Text>
    </View>
    <TouchableOpacity
      accessibilityLabel="Open filters"
      accessibilityRole="button"
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onPress={[MockFunction]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#1A2520"
        name="options-outline"
        size={16}
      />
    </TouchableOpacity>
  </TouchableOpacity>
</View>
`;
